--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,9 +61,7 @@ commands:
     description: "Deploys API via Serverless"
     parameters:
       stage:
-        type: string
-      aws-account:
-        type: string
+        type: string      
     steps:
       - *attach_workspace
       - checkout
@@ -86,7 +84,7 @@ commands:
           name: Deploy lambda
           command: |
             cd ./ArrearsFunctions/
-            sls deploy --stage <<parameters.stage>> --account <<parameters.aws-account>> --conceal
+            sls deploy --stage <<parameters.stage>> --conceal
 
 jobs:
   check-code-formatting:
@@ -145,19 +143,16 @@ jobs:
     steps:
       - deploy-lambda:
           stage: "development"
-          aws-account: $AWS_ACCOUNT_DEVELOPMENT
   deploy-to-staging:
     executor: docker-dotnet
     steps:
       - deploy-lambda:
           stage: "staging"
-          aws-account: $AWS_ACCOUNT_STAGING
   deploy-to-production:
     executor: docker-dotnet
     steps:
       - deploy-lambda:
           stage: "production"
-          aws-account: $AWS_ACCOUNT_PRODUCTION
 
 workflows:
   check-and-deploy-development:
